# dumbo

./: .bazelrc  .gitignore  .prettierrc.yaml  CPPLINT.cfg  README.md  WORKSPACE
.github/workflows/: style_check.yml  unittest.yaml
dumbo/: copts.bzl
dumbo/benchmark/ld/: .gitignore  benchmark.sh
dumbo/benchmark/loop_unrolling/: BUILD  main.cc  run.sh
dumbo/bug/stack_overflow/: BUILD  process_overflow.cc  thread_overflow.cc
dumbo/design-pattern/: BUILD  README.md
dumbo/design-pattern/behavioral/: chain_of_responsibility.cc  command.cc  iterator.cc  mediator.cc  memento.cc  observer.cc  state.cc  strategy.cc  template_method.cc  visitor.cc
dumbo/design-pattern/creational/: abstract_factory.cc  builder.cc  factory_method.cc  prototype.cc  simple_factory.cc  singleton.cc
dumbo/design-pattern/structural/: adapter.cc  bridge.cc  composite.cc  decorator.cc  facade.cc  flyweight.cc  proxy.cc
dumbo/intel/simd/: BUILD  sse_avx.cc
dumbo/magic/abi-string/: run.sh  sizeof-string.cc
dumbo/magic/cow/: BUILD  cow_string.h  cow_string_test.cc
dumbo/magic/dlopen_plugin/: BUILD  action_service.cc
dumbo/magic/hack_syscall/: BUILD  hack.cc  hack.h  main.cc
dumbo/magic/llvm-pass/: CMakeLists.txt  hello_pass.cc  main.c  pass.sh
dumbo/standard/: BUILD
dumbo/system/: fcntl.cc  timerfd.cc  timerfd.md
dumbo/trace/: BUILD  trace.h  trace_test.cc
dumbo/utilities/: BUILD  catch2_main.cc  class_utils.h  conv.h
script/: generate.py
script/analyzer/: analyzer.sh
script/compdb/: BUILD
script/iwyu/: BUILD  README.md  iwyu.sh
toolchain/: cc_toolchain_config.bzl
(+347 files in other folders)
